--- a/src/Componenets/Page3/Page3.css
+++ b/src/Componenets/Page3/Page3.css
@@ -31,3 +31,17 @@
     margin-bottom: 20px;
     border-radius: 10px;
 }
+.background-video{
+    width: 100%;
+    height: 80vh;
+    /* background: #000; */
+    background-image: url(./icons/bgimg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    filter: blur(1px);
+    margin: 30px 0px 10px 0px;
+    cursor: pointer;
+   
+    
+}
